Correcciones:
- Actualizado modelo de datos.
- Sustituido List.of por Arrays.as en SpamFilterService
- Añadido Digits a workload en Task